<resources>
    <string name="app_name">GopherWay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name = "buildings">
        <item>Akerman Hall</item>
        <item>Amundson Hall</item>
        <item>Armory</item>
        <item>Bell Museum</item>
        <item>Boynton </item>
        <item>Civil Engineering </item>
        <item>Coffman Memorial</item>
        <item>Diehl Hall</item>
        <item>Folwell Hall</item>
        <item>Ford Hall</item>
        <item>Graduate Hotel</item>
        <item>Hassellmo Hall</item>
        <item>Jackson Hall</item>
        <item>Johnston Hall</item>
        <item>Jones Hall</item>
        <item>Keller Hall</item>
        <item>Kolthoff Hall</item>
        <item>Lind Hall</item>
        <item>Mayo Auditiorium</item>
        <item>Mayo Building</item>
        <item>McNamara Alumni Center</item>
        <item>Mechanical Engineering</item>
        <item>Mollecular Biology</item>
        <item>Moos Tower</item>
        <item>Morrill Hall</item>
        <item>Murphy Hall</item>
        <item>Nolte Ctr</item>
        <item>P-W Building</item>
        <item>Smith Hall</item>
        <item>Tate Lab</item>
        <item>U of M Medical Center</item>
        <item>VFW Cancer Research Ctr</item>
        <item>Vincent Hall</item>
        <item>Walter DTC</item>
        <item>Washington Ave Parking Ramp</item>
        <item>Weaver-Densford Hall</item>
        <item>Wiliamson Hall</item>
        <item>Yudolf Hall</item>
    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_saved_locations">Saved Routes</string>
    <string name="menu_travel_history">Travel History</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>
