<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gopherway.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_saved_locations"
        android:name="com.example.gopherway.ui.savedlocations.SavedLocationsFragment"
        android:label="@string/menu_saved_locations"
        tools:layout="@layout/fragment_saved_locations" />

    <fragment
        android:id="@+id/nav_travel_history"
        android:name="com.example.gopherway.ui.travelhistory.TravelHistoryFragment"
        android:label="@string/menu_travel_history"
        tools:layout="@layout/fragment_travel_history" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.gopherway.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.gopherway.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.gopherway.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>