<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:background="#660014">

    <group android:checkableBehavior="single"
        android:background="#660014">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_saved_locations"
            android:icon="@drawable/ic_menu_saved_locations"
            android:title="@string/menu_saved_locations" />
        <item
            android:id="@+id/nav_travel_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_travel_history" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>
</menu>
